Added some tabs, fixed reading from file, added second line(vertical velocity) to velocity chart.

--- a/Makefile.toml
+++ b/Makefile.toml
@@ -20,3 +20,10 @@ script = '''
 pip install --force ./console_backend
 fbs run
 '''
+
+[tasks.freeze]
+dependencies = ["copy-capnp"]
+script = '''
+pip install -e ./console_backend
+fbs freeze
+'''
