--- a/console_backend/Cargo.toml
+++ b/console_backend/Cargo.toml
@@ -11,6 +11,7 @@ pyo3 = { version = "0.13", features = ["extension-module"] }
 sbp = { git = "https://github.com/swift-nav/libsbp.git", rev = "986af3f35033a720f21872794d0bd6579c02866c" }
 ordered-float = "2.0"
 ndarray = "0.14.0"
+glob = { version = "0.3.0" }
 
 
 [build-dependencies]
