--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,11 @@ pycapnp = "^1.0.0"
 fbs = {git = "https://github.com/silverjam/fbs.git"}
 
 [tool.poetry.dev-dependencies]
-pylint = "^2.6.0"
+black = "^19.10b0"
 jedi = "^0.18.0"
 mypy = "^0.790"
+pylint = "^2.6.0"
+pytest = "^5.4.3"
 setuptools-rust = "^0.11.6"
 
 [build-system]
