--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ pylint = "^2.6.0"
 jedi = "^0.18.0"
 mypy = "^0.790"
 setuptools-rust = "^0.11.6"
+Nuitka = "^0.6.11"
 
 [build-system]
 requires = ["poetry-core>=1.0.0", "setuptools>=41.0.0", "wheel", "setuptools_rust>=0.10.2"]
