--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 __pycache__
 target
 .mypy_cache
+console.build
+console.dist
+console/console_resources.py
+resources/console_backend.capnp
+resources/view.qml
