--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,10 @@ authors = ["Swift Navigation <dev@swiftnav.com>"]
 [tool.poetry.dependencies]
 python = ">=3.9,<3.10"
 PySide2 = "^5.15.2"
-pycapnp = "^1.0.0"
+pkgconfig = "^1.5.1"
+Cython = "^0.29.21"
 fbs = {git = "https://github.com/silverjam/fbs.git"}
+pycapnp = {git = "https://github.com/silverjam/pycapnp.git", rev = "disable-import-hook"}
 
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
@@ -17,6 +19,7 @@ mypy = "^0.790"
 pylint = "^2.6.0"
 pytest = "^5.4.3"
 setuptools-rust = "^0.11.6"
+nuitka = "^0.6.11"
 
 [build-system]
 requires = ["poetry-core>=1.0.0", "setuptools>=41.0.0", "wheel", "setuptools_rust>=0.10.2"]
