--- a/Makefile.toml
+++ b/Makefile.toml
@@ -1,6 +1,5 @@
 [env]
-PYTHON_DIR = "src/main/python"
-MAC_PYTHON_DIR = "console"
+PYTHON_FILES = { script = ["echo $(find . -path ./target -prune -false -o -name '*.py')"] }
 
 [config]
 default_to_workspace = false
@@ -9,15 +8,12 @@ default_to_workspace = false
 script_runner = "@shell"
 script = '''
 pyside2-rcc resources/console_resources.qrc -o src/main/python/console_resources.py
-cp src/main/python/console_resources.py console/console_resources.py
 '''
 
 [tasks.copy-capnp]
 script_runner = "@shell"
 script = '''
 cp src/main/resources/base/console_backend.capnp console_backend/console_backend.capnp
-cp src/main/resources/base/console_backend.capnp resources/console_backend.capnp
-cp src/main/resources/base/view.qml resources/view.qml
 '''
 
 [tasks.run]
@@ -27,7 +23,7 @@ pip install -e ./console_backend
 fbs run
 '''
 
-[tasks.run-prod]
+[tasks.prod-run]
 dependencies = ["copy-capnp", "generate-resources"]
 script = '''
 pip install --force ./console_backend
@@ -52,7 +48,7 @@ dependencies = ["copy-capnp", "generate-resources"]
 script_runner = "@shell"
 script = '''
 pip install --force ./console_backend
-bash console/linux.sh
+bash src/main/nuitka/linux.sh
 '''
 
 [tasks.prod-mac-nuitka-build]
@@ -60,24 +56,29 @@ dependencies = ["copy-capnp", "generate-resources"]
 script_runner = "@shell"
 script = '''
 pip install --force ./console_backend
-bash console/mac.sh
+bash src/main/nuitka/mac.sh
 '''
 
 [tasks.prod-mac-nuitka-installer]
 dependencies = ["prod-mac-nuitka-build"]
 script_runner = "@shell"
 script = '''
-mkdir -p console.app/Contents/MacOS
-cp -r console.dist/* console.app/Contents/MacOS/.
-hdiutil create -volname SwiftNavConsole -srcfolder console.app -ov -format UDZO 'Swift Navigation Console.dmg'
+mkdir -p main.app/Contents/MacOS
+cp -r main.dist/* main.app/Contents/MacOS/.
+hdiutil create -volname SwiftNavConsole -srcfolder main.app -ov -format UDZO 'Swift Navigation Console.dmg'
 '''
 
-[tasks.rust-fmt]
+[tasks.rust-format]
+dependencies = ["copy-capnp"]
+command = "cargo"
+args    = ["fmt", "--all"]
+
+[tasks.rust-format-check]
 dependencies = ["copy-capnp"]
 command = "cargo"
 args    = ["fmt", "--", "--check"]
 
-[tasks.rust-clippy]
+[tasks.rust-lint]
 dependencies = ["copy-capnp"]
 command = "cargo"
 args    = ["clippy", "--all-targets", "--", "--deny", "warnings"]
@@ -87,17 +88,26 @@ dependencies = ["copy-capnp"]
 command = "cargo"
 args    = ["test", "--", "--nocapture"]
 
+[tasks.rust-type-check]
+dependencies = ["copy-capnp"]
+command = "cargo"
+args    = ["check"]
+
 [tasks.python-type-check]
-command = "mypy"
-args    = ["${PYTHON_DIR}", "${MAC_PYTHON_DIR}"]
+script_runner = "@shell"
+script = '''
+mypy $PYTHON_FILES
+'''
 
 [tasks.python-format-check]
-command = "black"
-args    = ["--line-length=120", "--check", "--diff", "${PYTHON_DIR}", "${MAC_PYTHON_DIR}"]
+script = '''
+black --line-length=120 --check --diff $PYTHON_FILES
+'''
 
 [tasks.python-format-all]
-command = "black"
-args    = ["--line-length=120", "${PYTHON_DIR}" , "${MAC_PYTHON_DIR}"]
+script = '''
+black --line-length=120 $PYTHON_FILES
+'''
 
 [tasks.python-format]
 alias="python-format-all"
@@ -105,7 +115,21 @@ alias="python-format-all"
 [tasks.python-lint]
 script_runner = "@shell"
 script = '''
-touch ${PYTHON_DIR}/__init__.py
-pylint --output-format=parseable ${PYTHON_DIR} ${MAC_PYTHON_DIR}
-rm ${PYTHON_DIR}/__init__.py
+pylint --output-format=parseable $PYTHON_FILES
 '''
+
+[tasks.format-all]
+dependencies = ["python-format-all", "rust-format"]
+
+[tasks.format-check]
+dependencies = ["python-format-check", "rust-format-check"]
+
+[tasks.lint]
+dependencies = ["python-lint", "rust-lint"]
+
+[tasks.types]
+dependencies = ["python-type-check", "rust-type-check"]
+
+[tasks.tests]
+dependencies = ["rust-tests"]
+
