--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -143,13 +143,7 @@ jobs:
           OS_NAME: ${{ runner.os }}
         run: |
           conda activate console_pp
-          if [ "$RUNNER_OS" == "Linux" ]; then
-              cargo make prod-linux-installer
-          elif [ "$RUNNER_OS" == "macOS" ]; then
-              cargo make prod-mac-nuitka-installer
-          elif [ "$RUNNER_OS" == "Windows" ]; then
-              cargo make prod-windows-installer
-          fi
+          cargo make prod-installer
           bash ./.github/ci-build.sh
           echo "RELEASE_ARCHIVE=$(cat release-archive.filename)" >>$GITHUB_ENV
 
