[CPP-56][CPP-57]Windows CD and add negligible filter for Windows/Linux CD. (#6)
* [CPP-57]Windows CD

* Add mechanism to delete unwanted Qt things for fbs.

* Respond to review request, use cargo makes platform override for prod-installer task.

* Respond to review requests.

--- a/Makefile.toml
+++ b/Makefile.toml
@@ -38,12 +38,30 @@ fbs freeze
 '''
 
 [tasks.prod-installer]
-dependencies = ["prod-freeze"]
+dependencies = ["prod-freeze", "remove-negligibles"]
 script = '''
 fbs installer
 '''
 
-[tasks.prod-linux-nuitka-build]
+[tasks.create-remove-negligibles-file]
+script_runner = "@shell"
+script = '''
+python utils/get_fbs_remove_list.py
+'''
+
+[tasks.remove-negligibles.linux]
+dependencies = []
+script = '''
+bash src/main/fbs/linux-remove-negligibles.sh
+'''
+
+[tasks.remove-negligibles.windows]
+dependencies = []
+script = '''
+bash src/main/fbs/windows-remove-negligibles.sh
+'''
+
+[tasks.prod-nuitka-build.linux]
 dependencies = ["copy-capnp", "generate-resources"]
 script_runner = "@shell"
 script = '''
@@ -51,7 +69,7 @@ pip install --force ./console_backend
 bash src/main/nuitka/linux.sh
 '''
 
-[tasks.prod-mac-nuitka-build]
+[tasks.prod-nuitka-build.mac]
 dependencies = ["copy-capnp", "generate-resources"]
 script_runner = "@shell"
 script = '''
@@ -59,8 +77,14 @@ pip install --force ./console_backend
 bash src/main/nuitka/mac.sh
 '''
 
-[tasks.prod-mac-nuitka-installer]
-dependencies = ["prod-mac-nuitka-build"]
+[tasks.create-nuitka-script]
+script_runner = "@shell"
+script = '''
+python utils/create_nuitka_script.py
+'''
+
+[tasks.prod-installer.mac]
+dependencies = ["prod-nuitka-build"]
 script_runner = "@shell"
 script = '''
 mkdir -p main.app/Contents/MacOS
@@ -120,6 +144,9 @@ pylint --output-format=parseable $PYTHON_FILES
 
 [tasks.format-all]
 dependencies = ["python-format-all", "rust-format"]
+
+[tasks.format]
+alias = "format-all"
 
 [tasks.format-check]
 dependencies = ["python-format-check", "rust-format-check"]
