--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,12 +46,7 @@ jobs:
           use-only-tar-bz2: true
       - name: Install Dependencies.
         run: |
-          if [ "$RUNNER_OS" == "Linux" ]; then
-              sudo apt-get install -y capnproto ruby ruby-dev rubygems build-essential
-              sudo gem install --no-document fpm
-          elif [ "$RUNNER_OS" == "macOS" ]; then
-              brew install capnp
-          fi
+          sudo apt-get install -y capnproto
         shell: bash
 
       - name: Poetry Install
@@ -88,6 +83,7 @@ jobs:
         os:
           - ubuntu-20.04
           - macos-10.15
+          - windows-2019
     runs-on: ${{ matrix.os }}
     defaults:
       run:
@@ -107,6 +103,8 @@ jobs:
               sudo gem install --no-document fpm
           elif [ "$RUNNER_OS" == "macOS" ]; then
               brew install capnp
+          elif [ "$RUNNER_OS" == "Windows" ]; then
+              choco install capnproto nsis
           fi
 
       - name: Install stable Rust
@@ -144,11 +142,7 @@ jobs:
           OS_NAME: ${{ runner.os }}
         run: |
           conda activate console_pp
-          if [ "$RUNNER_OS" == "Linux" ]; then
-              cargo make prod-installer
-          elif [ "$RUNNER_OS" == "macOS" ]; then
-              cargo make prod-mac-nuitka-installer
-          fi
+          cargo make prod-installer
           bash ./.github/ci-build.sh
           echo "RELEASE_ARCHIVE=$(cat release-archive.filename)" >>$GITHUB_ENV
 
