--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,80 +9,80 @@ on:
   pull_request:
 
 jobs:
-  checks:
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        shell: bash -l {0}
-    steps:
-      - name: Checkout source
-        uses: actions/checkout@v2
-        with:
-          submodules: recursive
-          ssh-key: ${{ secrets.SSH_KEY }}
+  # checks:
+  #   runs-on: ubuntu-latest
+  #   defaults:
+  #     run:
+  #       shell: bash -l {0}
+  #   steps:
+  #     - name: Checkout source
+  #       uses: actions/checkout@v2
+  #       with:
+  #         submodules: recursive
+  #         ssh-key: ${{ secrets.SSH_KEY }}
 
-      - name: Install stable Rust
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          override: true
-          components: rustfmt, clippy
-      - uses: davidB/rust-cargo-make@v1
-        with:
-          version: '0.32.11'
-      - name: Cache conda
-        uses: actions/cache@v1
-        env:
-          CACHE_NUMBER: 0
-        with:
-          path: ~/conda_pkgs_dir
-          key:
-            ${{ runner.os }}-conda-${{ env.CACHE_NUMBER }}-${{
-            hashFiles('conda.yml') }}
-      - uses: conda-incubator/setup-miniconda@v2
-        with:
-          activate-environment: console_pp
-          environment-file: conda.yml
-          use-only-tar-bz2: true
-      - name: Install Dependencies.
-        run: |
-          sudo apt-get install -y capnproto
-        shell: bash
+  #     - name: Install stable Rust
+  #       uses: actions-rs/toolchain@v1
+  #       with:
+  #         toolchain: stable
+  #         override: true
+  #         components: rustfmt, clippy
+  #     - uses: davidB/rust-cargo-make@v1
+  #       with:
+  #         version: '0.32.11'
+  #     - name: Cache conda
+  #       uses: actions/cache@v1
+  #       env:
+  #         CACHE_NUMBER: 0
+  #       with:
+  #         path: ~/conda_pkgs_dir
+  #         key:
+  #           ${{ runner.os }}-conda-${{ env.CACHE_NUMBER }}-${{
+  #           hashFiles('conda.yml') }}
+  #     - uses: conda-incubator/setup-miniconda@v2
+  #       with:
+  #         activate-environment: console_pp
+  #         environment-file: conda.yml
+  #         use-only-tar-bz2: true
+  #     - name: Install Dependencies.
+  #       run: |
+  #         sudo apt-get install -y capnproto
+  #       shell: bash
 
-      - name: Poetry Install
-        run: |
-          conda activate console_pp
-          python -m poetry install
+  #     - name: Poetry Install
+  #       run: |
+  #         conda activate console_pp
+  #         python -m poetry install
 
-      - name: Run Format Check
-        run: |
-          conda activate console_pp
-          cargo make format-check
+  #     - name: Run Format Check
+  #       run: |
+  #         conda activate console_pp
+  #         cargo make format-check
 
-      - name: Run Type Check
-        run: |
-          conda activate console_pp
-          cargo make types
+  #     - name: Run Type Check
+  #       run: |
+  #         conda activate console_pp
+  #         cargo make types
 
-      - name: Run Lint Check
-        run: |
-          conda activate console_pp
-          cargo make lint
+  #     - name: Run Lint Check
+  #       run: |
+  #         conda activate console_pp
+  #         cargo make lint
 
-      - name: Run Tests
-        run: |
-          conda activate console_pp
-          cargo make tests
+  #     - name: Run Tests
+  #       run: |
+  #         conda activate console_pp
+  #         cargo make tests
 
   build:
     name: Build Binaries
-    needs:
-      - checks
+    # needs:
+    #   - checks
     strategy:
       matrix:
         os:
-          - ubuntu-20.04
-          - macos-10.15
+          # - ubuntu-20.04
+          # - macos-10.15
           - windows-2019
     runs-on: ${{ matrix.os }}
     defaults:
@@ -145,6 +145,7 @@ jobs:
           cargo make prod-installer
           bash ./.github/ci-build.sh
           echo "RELEASE_ARCHIVE=$(cat release-archive.filename)" >>$GITHUB_ENV
+          echo "BENCH_ARCHIVE=$(cat bench.filename)" >>$GITHUB_ENV
 
       - uses: actions/upload-artifact@v2
         with:
@@ -152,3 +153,37 @@ jobs:
           path: |
             ${{ env.RELEASE_ARCHIVE }}
             release-archive.filename
+
+      - uses: actions/upload-artifact@v2
+        with:
+          name: ${{ runner.os }}-artifacts-bench
+          path: |
+            ${{ env.BENCH_ARCHIVE }}
+            bench.filename
+
+  bench:
+    name: Build Binaries
+    needs:
+      - build
+    strategy:
+      matrix:
+        os:
+          - Windows
+          
+    runs-on: [self-hosted]
+    steps:
+      - name: Remove previous build.
+        shell: bash
+        run: |
+          rm -rf output
+      - uses: actions/download-artifact@v2
+        with:
+          name: Windows-artifacts-bench
+          path: |
+            output
+      - name: Extract zip and run bench.
+        run: |
+          cd output
+          7z x $(cat bench.filename) -aoa -o${{ runner.os }}
+          cd ${{ runner.os }}
+          cargo make frontend-bench          
