--- a/console_backend/Cargo.toml
+++ b/console_backend/Cargo.toml
@@ -12,10 +12,10 @@ sbp = { git = "https://github.com/swift-nav/libsbp.git", rev = "986af3f35033a720
 ordered-float = "2.0"
 ndarray = "0.14.0"
 glob = "0.3.0"
-criterion = "0.3"
+criterion = "0.3.4"
 
 [[bench]]
-name = "tests"
+name = "benches"
 harness = false
 
 
@@ -25,6 +25,7 @@ capnpc = "0.14"
 [lib]
 name = "console_backend"
 crate-type = ["cdylib", "lib"]
+bench = false
 
 [features]
 default = []
