--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 src/main/fbs/* linguist-vendored
 src/main/nuitka/* linguist-vendored
-console_backend/benches/data/2020-06-25-BayLoop/STEP_v2_SR_L2_OSR_staging_10Hz_GNSSOnly_AmotechL2/25-190704.sbp filter=lfs diff=lfs merge=lfs -text
+console_backend/benches/data/**/**/*.sbp filter=lfs diff=lfs merge=lfs -text
