--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,10 @@ jobs:
         with:
           submodules: recursive
           ssh-key: ${{ secrets.SSH_KEY }}
+          lfs: true
+
+      - name: Pull Git LFS objects
+        run: git lfs pull
 
       - name: Install ${{ runner.os }} Dependencies.
         run: |
